--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -60,10 +60,11 @@ stages:
         git commit -m "Update SONiC version files"
         [ -z "$GIT_REPO" ] && GIT_REPO=sonic-buildimage
         git remote add remote https://github.com/$GIT_USER/$GIT_REPO
-        git push remote HEAD:$BRANCH_NAME -f
+        git push remote HEAD:refs/heads/$BRANCH_NAME -f
         git branch -u remote/$BRANCH_NAME
 
         UPGRADE_TAG="Auto-Version-Upgrade"
+        echo $GIT_PASSWORD | gh auth login --with-token
         OLD_PRS=$(gh pr list -B $(Build.SourceBranchName) -R $(Build.Repository.Name) -l "$UPGRADE_TAG" | cut -d$'\t' -f1)
         for number in $OLD_PRS; do
           echo number=$number
