--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -59,6 +59,7 @@ stages:
         git add files/build/versions
         git commit -m "Update SONiC version files"
         [ -z "$GIT_REPO" ] && GIT_REPO=sonic-buildimage
+        git checkout -b $BRANCH_NAME
         git remote add remote https://github.com/$GIT_USER/$GIT_REPO
         git push remote HEAD:refs/heads/$BRANCH_NAME -f
         git branch -u remote/$BRANCH_NAME
