Update test.yml for Azure Pipelines

--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -26,6 +26,7 @@ stages:
     steps:
     - script: |
         sudo rm -rf *
+        sudo rm -rf \.??*
       displayName: 'cleanup'
     - script: |
         # TODO: Move to vmss extension
