--- a/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
+++ b/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
@@ -27,6 +27,15 @@ stages:
     - script: |
         sudo rm -rf *
       displayName: 'cleanup'
+    - script: |
+        # TODO: Move to vmss extension
+        if [ -z "$(which gh)" ]; then
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+          sudo apt-add-repository https://cli.github.com/packages
+          sudo apt update
+          sudo apt install gh
+        fi
+      displayName: 'Install gh'
     - checkout: self
       displayName: 'Checkout code'
     - download: current
@@ -46,8 +55,40 @@ stages:
           make freeze FREEZE_VERSION_OPTIONS="-a -d"
         done
         git diff files/build/versions
-      displayName: "Freeze Versions"
+      displayName: 'Freeze Versions'
+    - script: |
+        if [ -z "$GIT_USER" ]; then
+          echo "Skipped to send the pull request, GIT_USER not set."
+          exit 0
+        fi
+        BRANCH_NAME=repd/versions/$(Build.SourceBranchName)
+        echo '#!/bin/bash' > git_env_password.sh
+        echo 'echo $GIT_PASSWORD' >> git_env_password.sh
+        chmod a+x git_env_password.sh
+        export GIT_ASKPASS=./git_env_password.sh
+
+        git config user.name $GIT_USER
+        git config credential.https://github.com.username $GIT_USER
+        git add files/build/versions
+        git commit -m "Update SONiC version files"
+        [ -z "$GIT_REPO" ] && GIT_REPO=$(Build.SourceBranchName)
+        git checkout -b $BRANCH_NAME
+        git remote add remote https://github.com/$GIT_USER/$GIT_REPO
+        git push remote HEAD:refs/heads/$BRANCH_NAME -f
+        git branch -u remote/$BRANCH_NAME
+
+        UPGRADE_TAG="Auto-Version-Upgrade"
+        echo $GIT_PASSWORD | gh auth login --with-token
+        OLD_PRS=$(gh pr list -B $(Build.SourceBranchName) -R $(Build.Repository.Name) -l "$UPGRADE_TAG" | cut -d$'\t' -f1)
+        for number in $OLD_PRS; do
+          gh pr close $number
+        done
+        gh pr create -l "$UPGRADE_TAG" --title "Upgrade SONiC Versions" --body "Upgrade SONiC Versions" -B $(Build.SourceBranchName) -R $(Build.Repository.Name)
+      env:
+        GIT_USER: $(GIT_USER)
+        GIT_PASSWORD: $(GIT_PASSWORD)
+      displayName: 'Send Pull Request'
     - publish: $(System.DefaultWorkingDirectory)/files/build/versions
       artifact: 'sonic-buildimage.versions'
-      displayName: "Archive sonic versions"
+      displayName: 'Archive SONiC versions'
     
