--- a/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
+++ b/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
@@ -15,6 +15,11 @@ schedules:
 pool: sonicbld
 
 stages:
+- stage: Build
+  jobs:
+  - template: azure-pipelines-build.yml
+    parameters:
+      buildSlave: y
 - stage: UpgradeVersions
   jobs:
   - job: UpgradeVersions
@@ -33,13 +38,29 @@ stages:
       displayName: 'Install gh'
     - checkout: self
       displayName: 'Checkout code'
+    - download: current
+      patterns: '**/versions-*'
+    - script: |
+        mkdir -p target
+        default_platform=broadcom
+        artifacts=$(find $(Pipeline.Workspace) -maxdepth 1 -type d -name 'sonic-buildimage.*' | grep -v "sonic-buildimage.${default_platform}")
+        echo "artifacts$artifacts"
+        cp -r $(Pipeline.Workspace)/sonic-buildimage.${default_platform}/versions target/
+        make freeze FREEZE_VERSION_OPTIONS=-r
+        find files/build/versions 
+        for artifact in $artifacts
+        do
+          rm -rf target/versions
+          cp -r $artifact/versions target/
+          make freeze FREEZE_VERSION_OPTIONS="-a -d"
+        done
+        git diff files/build/versions
+      displayName: 'Freeze Versions'
     - script: |
         if [ -z "$GIT_USER" ]; then
           echo "Skipped to send the pull request, GIT_USER not set."
           exit 0
         fi
-        mkdir -p files/build/versions
-        echo test1 > files/build/versions/versions-test
         GIT_STATUS=$(git status  --porcelain files/build/versions)
         if [ -z "$GIT_STATUS" ]; then
           echo "Skiipped to send the pull request, no version change in files/build/versions"
@@ -63,7 +84,6 @@ stages:
         git add files/build/versions
         git commit -m "Update SONiC version files"
         git checkout -b $BRANCH_NAME
-        echo "REMOTEURL=https://github.com/$GIT_USER/$GIT_REPO"
         git remote add remote https://github.com/$GIT_USER/$GIT_REPO
         git push remote HEAD:refs/heads/$BRANCH_NAME -f
         git branch -u remote/$BRANCH_NAME
