--- a/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
+++ b/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
@@ -63,7 +63,7 @@ stages:
         fi
         GIT_STATUS=$(git status  --porcelain files/build/versions)
         if [ -z "$GIT_STATUS" ]; then
-          echo "Skiipped to send the pull request, no version change in files/build/versions"
+          echo "Skipped to send the pull request, no version change in files/build/versions"
           exit 0
         fi
         if [ ! -d "$HOME" ]; then
