--- a/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
+++ b/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
@@ -4,10 +4,11 @@
 # https://aka.ms/yaml
 
 trigger: none
+pr: none
 
 schedules:
-- cron: "0 0 * * 0"
-  displayName: Weekly Build
+- cron: "0 0 * * *"
+  displayName: Daily Build
   branches:
     include:
     - 202012
