--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ jobs:
       echo Add other tasks to build, test, and deploy your project.
       echo See https://aka.ms/yaml
       echo sleep 300 seconds
+      echo test
       sleep 300
     displayName: 'Run a multi-line script'
 - job: Job2
