--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool: sonicbld
 jobs:
-- job: Job1
+- job: PullRequestValidation
   steps:
   - script: echo Hello, world!
     displayName: 'Run a one-line script'
@@ -16,12 +16,5 @@ jobs:
       echo Add other tasks to build, test, and deploy your project.
       echo See https://aka.ms/yaml
       echo sleep 300 seconds
-      sleep 300
-    displayName: 'Run a multi-line script'
-- job: Job2
-  steps:
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-      echo See https://aka.ms/yaml
-      exit 1
+      sleep 120
     displayName: 'Run a multi-line script'
