--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,7 @@ stages:
       cache_mode: rcache
 
 - stage: Test
+  condition: eq($(PLATFORM), 'vs')
   variables:
   - name: inventory
     value: veos_vtb
