--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -61,6 +61,7 @@ parameters:
 
 jobs:
 - job:
+  condition: eq(variables.platform, '${{ parameters.platform }}')
   pool: ${{ parameters.pool }}
   displayName: ${{ parameters.platform }}
   timeoutInMinutes: ${{ parameters.timeout }}
