--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ trigger: none
 pr: none
  
 jobs:
-- template: build-template.yml
+- template: .azure-pipelines/build-template.yml
   parameters:
     platform: ${{ variables['platform'] }}
     cache_mode: wcache
