--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ pr: none
 jobs:
 - template: .azure-pipelines/build-template.yml
   parameters:
-    platform: ${{ variables['platform'] }}
-    platform_short: ${{ variables['platform_short'] }}
+    platform: $(platform)
+    platform_short: $(platform)
     cache_mode: wcache
     swi_image: true
