--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ pr: none
 jobs:
 - template: .azure-pipelines/build-template.yml
   parameters:
-    platform: $[variables.platform]
-    platform_short: $[variables.platform]
+    platform: '$[variables.platform]'
+    platform_short: '$[variables.platform]'
     cache_mode: wcache
     swi_image: true
