--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,17 @@ schedules:
 trigger: none
 pr: none
 
-jobs:
-- template: .azure-pipelines/build-template.yml
-  parameters:
-    platform: $(platform)
-    platform_short: $(platform)
-    job_name: "build"
-    cache_mode: wcache
-    swi_image: true
+stages:
+- stage: Build
+  jobs:
+  - template: azure-pipelines-build.yml
+    parameters:
+      buildOptions: 'SONIC_CONFIG_BUILD_JOBS=1 SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
+      jobFilters: $(PLATFORM)
+      postSteps:
+      - script: |
+          make freeze
+          git status files/build/versions
+          git add files/build/versions
+          git diff HEAD files/build/versions
+        displayName: "Show git diff"
