--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,13 +13,15 @@ schedules:
 trigger: none
 pr: none
 
+pool: sonicbld
+
 stages:
 - stage: Build
   jobs:
-  - template: .azure-pipelines/azure-pipelines-build.yml
+  - template: azure-pipelines-build.yml
     parameters:
       buildOptions: 'SONIC_CONFIG_BUILD_JOBS=1 SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
-      jobFilters: $(PLATFORM)
+      jobFilters: vs
       postSteps:
       - script: |
           make freeze
