Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
     parameters:
       buildOptions: 'SONIC_CONFIG_BUILD_JOBS=1 SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
       jobFilters:
-      - $(PLATFORM)
+      - '$(PLATFORM)'
       postSteps:
       - script: |
           make freeze
