--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,8 @@ stages:
   jobs:
   - job: job1
     timeoutInMinutes: $(TIMEOUTINMINUTES)
+    steps:
+      - script: echo abc
   - template: .azure-pipelines/azure-pipelines-build.yml
     parameters:
       buildOptions: 'SONIC_CONFIG_BUILD_JOBS=1 SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
