Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,10 @@ stages:
 - stage: Build
   jobs:
   - job: job1
-    timeoutInMinutes: $[ variables['TIMEOUTINMINUTES'] ]
+    ${{ if ne(variables.TIMEOUTINMINUTES, '' ) }}:
+      timeoutInMinutes: $[ variables['TIMEOUTINMINUTES'] ]
+    ${{ if eq(variables.TIMEOUTINMINUTES, '' ) }}:
+      timeoutInMinutes: 2
     steps:
       - script: |
           sleep 300
