Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
 stages:
 - stage: Build
   jobs:
-  - template: azure-pipelines-job-groups.yml
+  - template: .azure-pipelines/azure-pipelines-job-groups.yml
     parameters:
       preSteps:
       - script: |
