--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -22,3 +22,5 @@ jobs:
       uses: 'pascalgn/automerge-action@v0.13.1'
       env:
         GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        MERGE_LABELS: ''
+        MERGE_METHOD: "squash"
