--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,9 +8,12 @@ on:
       - completed
 jobs:
   automerge:
-    if: github.event.check_suite.app.name == 'azure-pipelines' &&  github.event.check_suite.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
+    - name: print
+      run: |
+        echo "print info"
+        echo '${{ toJSON(github.event.check_suite) }}'
     - name: automerge
       uses: 'pascalgn/automerge-action@v0.13.1'
       env:
