--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -1,3 +1,5 @@
+# The azure pipeline template for Official build, and upgrade version build
+
 parameters:
 - name: 'jobFilters'
   type: object
@@ -5,68 +7,54 @@ parameters:
 - name: 'buildOptions'
   type: string
   default: 'SONIC_CONFIG_BUILD_JOBS=1'
-- name: 'buildSlave'
-  type: string
-  default: 'n'
 - name: 'postSteps'
   type: stepList
   default: []
 
 jobs:
-- template: azure-pipelines-job-groups.yml
+- template: build-template.yml
   parameters:
     jobFilters: ${{ parameters.jobFilters }}
+    preSteps: ${{ parameters. preSteps }}
     preSteps:
       - script: |
-          containers=$(docker container ls | grep "sonic-slave" | awk '{ print $1 }')
-          if [ ! -z "$containers" ]; then
-            docker container kill $containers || true
-            sleep 5
+          support_cache_platforms=("vs" "broadcom" "mellanox")
+          if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
+            CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/${{ parameters.platform }}"
+            BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
           fi
-          if [ "${{ parameters.buildSlave }}" == "y" ]; then
-            images=$(docker images 'sonic-slave-*' -a -q)
-            [ ! -z "$images" ] && docker rmi -f $images
-          fi
-          sudo rm -rf $(ls -A1)
-        displayName: 'Init'
-      - checkout: self
-        submodules: recursive
-        displayName: 'Checkout code'
-      - script: |
-          make ${{ parameters.buildOptions }} PLATFORM=$GROUP_NAME configure
-        displayName: 'Make configure'
-    postSteps:
-      - ${{ parameters.postSteps }}
-      - publish: $(System.DefaultWorkingDirectory)/target
-        artifact: 'sonic-buildimage.$(GROUP_NAME)$(GROUP_EXTNAME)'
-        displayName: "Archive sonic image"
+        displayName: "Make build options"
+    postSteps: ${{ parameters.postSteps }}
     jobGroups:
-      - name: vs
-        script: |
-          sudo bash -c "echo 1 > /proc/sys/vm/compact_memory"
-          make ${{ parameters.buildOptions }} target/sonic-vs.img.gz
-      - name: broadcom
-        script: |
-          make ${{ parameters.buildOptions }} target/sonic-broadcom.bin target/sonic-aboot-broadcom.swi
-      - name: barefoot
-        script: |
-          make ${{ parameters.buildOptions }} target/sonic-barefoot.bin target/sonic-aboot-barefoot.swi
-      - name: centec
-        script: |
-          make ${{ parameters.buildOptions }} INSTALL_DEBUG_TOOLS=y target/sonic-centec.bin
-          mv target/sonic-centec.bin target/sonic-centec-dbg.bin
-          make ${{ parameters.buildOptions }} target/sonic-centec.bin
-          make ${{ parameters.buildOptions }} ENABLE_SYNCD_RPC=y target/docker-syncd-centec-rpc.gz
-      - name: innovium
-        script: |
-          make ${{ parameters.buildOptions }} SONIC_CONFIG_BUILD_JOBS=1 target/sonic-innovium.bin
-      - name: mellanox
-        script: |
-          make ${{ parameters.buildOptions }} target/sonic-mellanox.bin
-      - name: mellanox
-        extName: _rpc
-        script: |
-          make ${{ parameters.buildOptions }} ENABLE_SYNCD_RPC=y all
-      - name: nephos
-        script: |
-          make ${{ parameters.buildOptions }} target/sonic-nephos.bin
+    - name: vs
+      script: |
+        make $(BUILD_OPTIONS) target/docker-sonic-vs.gz target/sonic-vs.img.gz target/docker-ptf.gz
+    - name: broadcom
+      script: |
+        make $(BUILD_OPTIONS) target/sonic-broadcom.bin target/sonic-aboot-broadcom.swi
+    - name: mellanox
+      script: |
+        make $(BUILD_OPTIONS) ENABLE_SYNCD_RPC=y all
+    - name: barefoot
+      script: |
+        make $(BUILD_OPTIONS) target/sonic-barefoot.bin target/sonic-aboot-barefoot.swi
+    - name: innovium
+      script: |
+        make $(BUILD_OPTIONS) SONIC_CONFIG_BUILD_JOBS=1 target/sonic-innovium.bin
+    - name: nephos
+      script: |
+        make $(BUILD_OPTIONS) target/sonic-nephos.bin
+    - name: marvell-armhf
+      pool: sonicbld_8c
+      timeoutInMinutes: 3600
+      variables:
+        PLATFORM_ARCH: armhf
+      script: |
+        make $(BUILD_OPTIONS) target/sonic-marvell-armhf.bin
+    - name: centec-arm64
+      pool: sonicbld_8c
+      timeoutInMinutes: 3600
+      variables:
+        PLATFORM_ARCH: arm64
+      script: |
+        make $(BUILD_OPTIONS) target/sonic-centec-arm64.bin
