--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -1,116 +1,54 @@
+# The azure pipeline template for PR build, Official build, and upgrade version build
+
 parameters:
-- name: platform
+- name: 'jobFilters'
+  type: object
+  default: ''
+- name: 'buildOptions'
   type: string
-  values:
-  - broadcom
-  - centec-arm64
-  - marvell-armhf
-  - mellanox
-  - vs
-
-- name: platform_arch
-  type: string
-  values:
-  - amd64
-  - armhf
-  - arm64
-  default: amd64
-
-- name: platform_short
-  type: string
-  values:
-  - brcm
-  - centec-arm64
-  - marvell-armhf
-  - mlnx
-  - vs
-
-- name: cache_mode
-  type: string
-  values:
-  - wcache
-  - rcache
-  - cache
-
-- name: pool
-  type: string
-  values:
-  - sonicbld
-  - sonicbld_8c
-  default: sonicbld
-
-- name: dbg_image
-  type: boolean
-  default: false
-
-- name: swi_image
-  type: boolean
-  default: false
-
-- name: raw_image
-  type: boolean
-  default: false
-
-- name: sync_rpc_image
-  type: boolean
-  default: false
-
-- name: timeout
-  type: number
-  default: 600
+  default: 'SONIC_CONFIG_BUILD_JOBS=1'
+- name: 'preSteps'
+  type: stepList
+  default: []
+- name: 'postSteps'
+  type: stepList
+  default: []
+- name: jobGroups
+  type: object
+  default: []
 
 jobs:
-- job:
-  pool: ${{ parameters.pool }}
-  displayName: ${{ parameters.platform }}
-  timeoutInMinutes: ${{ parameters.timeout }}
-  steps:
-  - template: cleanup.yml
-  - checkout: self
-    clean: true
-    submodules: recursive
-    displayName: 'Checkout code'
-  - script: |
-      git submodule foreach --recursive 'git clean -xfdf || true'
-      git submodule foreach --recursive 'git reset --hard || true'
-      git submodule foreach --recursive 'git remote update || true'
-      git submodule update --init --recursive
-    displayName: 'Reset submodules'
-  - script: |
-      set -e
-      sudo modprobe overlay
-      sudo apt-get install -y acl
-      export DOCKER_DATA_ROOT_FOR_MULTIARCH=/data/march/docker
-      CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=${{ parameters.cache_mode }} SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/${{ parameters.platform }}"
-      ENABLE_DOCKER_BASE_PULL=y make configure PLATFORM=${{ parameters.platform }} PLATFORM_ARCH=${{ parameters.platform_arch }}
-      trap "sudo rm -rf fsroot" EXIT
-
-      if [ ${{ parameters.platform }} == vs ]; then
-        if [ ${{ parameters.dbg_image }} == true ]; then
-          make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) INSTALL_DEBUG_TOOLS=y target/sonic-vs.img.gz && \
-            mv target/sonic-vs.img.gz target/sonic-vs-dbg.img.gz
-        fi
-
-        make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) target/docker-sonic-vs.gz target/sonic-vs.img.gz target/docker-ptf.gz
-      else
-        if [ ${{ parameters.dbg_image }} == true ]; then
-          make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) INSTALL_DEBUG_TOOLS=y target/sonic-${{ parameters.platform }}.bin && \
-            mv target/sonic-${{ parameters.platform }}.bin target/sonic-${{ parameters.platform }}-dbg.bin
-        fi
-        if [ ${{ parameters.swi_image }} == true ]; then
-          make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) ENABLE_IMAGE_SIGNATURE=y target/sonic-aboot-${{ parameters.platform }}.swi
-        fi
-        if [ ${{ parameters.raw_image }} == true ]; then
-          make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) target/sonic-${{ parameters.platform }}.raw
-        fi
-        if [ ${{ parameters.sync_rpc_image }} == true ]; then
-          make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) ENABLE_SYNCD_RPC=y target/docker-syncd-${{ parameters.platform_short }}-rpc.gz
-        fi
-
-        make USERNAME=admin $CACHE_OPTIONS SONIC_BUILD_JOBS=$(nproc) target/sonic-${{ parameters.platform }}.bin
-      fi
-    displayName: 'Build sonic image'
-  - template: cleanup.yml
-  - publish: $(System.DefaultWorkingDirectory)/
-    artifact: sonic-buildimage.${{ parameters.platform }}
-    displayName: "Archive sonic image"
+- template: azure-pipelines-job-groups.yml
+  parameters:
+    jobFilters: ${{ parameters.jobFilters }}
+    jobVariables:
+      PLATFORM: $(GROUP_NAME)
+      PLATFORM_ARCH: amd64
+      BUILD_OPTIONS: ${{ parameters.buildOptions }}
+    preSteps:
+      - ${{ parameters. preSteps }}
+      - template: cleanup.yml
+      - checkout: self
+        submodules: recursive
+        displayName: 'Checkout code'
+      - script: |
+          sudo modprobe overlay
+          sudo apt-get install -y acl
+          export DOCKER_DATA_ROOT_FOR_MULTIARCH=/data/march/docker
+          sudo bash -c "echo 1 > /proc/sys/vm/compact_memory"
+          make $BUILD_OPTIONS PLATFORM=$(PLATFORM) PLATFORM_ARCH=$(PLATFORM_ARCH) configure
+        displayName: 'Make configure'
+      - script: |
+          if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
+            CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/${{ parameters.platform }}"
+            BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
+            echo '##vso[task.setvariable variable=BUILD_OPTIONS]$BUILD_OPTIONS'
+          fi
+        displayName: "Make build options"
+    postSteps:
+      - publish: $(System.DefaultWorkingDirectory)/target
+        artifact: 'sonic-buildimage.$(GROUP_NAME)$(GROUP_EXTNAME)'
+        displayName: "Archive sonic image"
+      - ${{ parameters.postSteps }}
+      - template: cleanup.yml
+    jobGroups: ${{ parameters.jobGroups }}
