--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -26,7 +26,8 @@ stages:
   - template: build-template.yml
     parameters:
       buildOptions: $[variables.VERSION_CONTROL_OPTIONS] SONIC_BUILD_JOBS=$(nproc)
-      jobFilters: none
+      jobFilters:
+      - vs
       postSteps:
       - script: |
           make freeze
