--- a/.azure-pipelines/azure-pipelines-job-groups.yml
+++ b/.azure-pipelines/azure-pipelines-job-groups.yml
@@ -35,7 +35,7 @@ jobs:
         GROUP_EXTNAME: '${{ jobGroup.extName }}'
         GROUP_NAMES: ${{ join(',', parameters.jobGroups.*.name ) }}
         TEST_BUILD_NAME: ${{ variables['Build.DefinitionName'] }}
-        TEST_GROUP_NAME: ${{ format('.{0}{1}', jobGroup.name, jobGroup.extName)) }}
+        TEST_GROUP_NAME: ${{ format('.{0}{1}', jobGroup.name, jobGroup.extName) }}
         ${{ if ne(jobGroup.variables, '') }}:
           ${{ jobGroup.variables }}
         ${{ each para in parameters.jobvariables }}:
