--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -17,6 +17,7 @@ pr: none
 
 stages:
 - stage: Build
+  pool: sonicbld
   variables:
     CACHE_MODE: wcache
     ${{ if eq(variables['Build.SourceBranchName'], '202012') }}:
