--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -41,6 +41,8 @@ jobs:
       - script: |
           if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
             CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/$(PLATFORM)"
+            echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
+            echo "BUILD_OPTIONS=$BUILD_OPTIONS"
             BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
             echo '##vso[task.setvariable variable=BUILD_OPTIONS]$BUILD_OPTIONS'
           fi
