--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -20,8 +20,10 @@ jobs:
         support_cache_platforms=("vs" "broadcom" "mellanox")
         if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
           CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/$(PLATFORM)"
+          echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
           BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
         fi
+        echo "BUILD_OPTIONS1=$(BUILD_OPTIONS)"
       displayName: "Make build options"
     postSteps: ${{ parameters.postSteps }}
     jobGroups:
