--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -17,7 +17,7 @@ jobs:
     jobFilters: ${{ parameters.jobFilters }}
     preSteps:
     - script: |
-        support_cache_platforms=("vs" "broadcom" "mellanox")
+        echo "PLATFORM=$(PLATFORM)"
         if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
           CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/$(PLATFORM)"
           echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
