--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -18,7 +18,7 @@ jobs:
     preSteps:
     - script: |
         echo "PLATFORM=$(PLATFORM)"
-        if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q -v "^(vs|broadcom|mellanox)$"; then
+        if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM) | grep -E -q "^(vs|broadcom|mellanox)$"; then
           CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/$(PLATFORM)"
           echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
           BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
