--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -34,6 +34,7 @@ jobs:
             echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
             echo "BUILD_OPTIONS=$BUILD_OPTIONS"
             BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
+            echo "BUILD_OPTIONS=$BUILD_OPTIONS"
             echo '##vso[task.setvariable variable=BUILD_OPTIONS]$BUILD_OPTIONS'
           fi
         displayName: "Make build options"
@@ -42,6 +43,8 @@ jobs:
         displayName: 'Checkout code'
       - script: |
           sudo modprobe overlay
+          echo "BUILD_OPTIONS=$(BUILD_OPTIONS)"
+          echo "BUILD_OPTIONS=$BUILD_OPTIONS"
           sudo apt-get install -y acl
           export DOCKER_DATA_ROOT_FOR_MULTIARCH=/data/march/docker
           sudo bash -c "echo 1 > /proc/sys/vm/compact_memory"
