--- a/.azure-pipelines/build-template.yml
+++ b/.azure-pipelines/build-template.yml
@@ -35,7 +35,7 @@ jobs:
             echo "BUILD_OPTIONS=$BUILD_OPTIONS"
             BUILD_OPTIONS="$(BUILD_OPTIONS) $CACHE_OPTIONS"
             echo "BUILD_OPTIONS=$BUILD_OPTIONS"
-            echo '##vso[task.setvariable variable=BUILD_OPTIONS]$BUILD_OPTIONS'
+            echo "##vso[task.setvariable variable=BUILD_OPTIONS]$BUILD_OPTIONS"
           fi
         displayName: "Make build options"
       - checkout: self
