--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -26,7 +26,7 @@ stages:
   jobs:
   - template: azure-pipelines-build.yml
     parameters:
-      buildOptions: $[variables.VERSION_CONTROL_OPTIONS] SONIC_BUILD_JOBS=$(nproc) ENABLE_IMAGE_SIGNATURE=y
+      buildOptions: '$[variables.VERSION_CONTROL_OPTIONS] SONIC_BUILD_JOBS=$(nproc) ENABLE_IMAGE_SIGNATURE=y'
       jobFilters: none
       postSteps:
       - script: |
