Update official-build.yml for Azure Pipelines

--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -8,8 +8,7 @@ schedules:
   displayName: Daily midnight build
   branches:
     include:
-    - master
-  always: true
+    - disable
 
 trigger: none
 pr: none
