Fix the SONiC version starts with HEAD issue

--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -20,6 +20,7 @@ stages:
   pool: sonicbld
   variables:
     CACHE_MODE: wcache
+    BRANCH_NAME: $(Build.SourceBranchName)
     ${{ if eq(variables['Build.SourceBranchName'], '202012') }}:
       VERSION_CONTROL_OPTIONS: 'SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
   jobs:
