--- a/.azure-pipelines/official-build.yml
+++ b/.azure-pipelines/official-build.yml
@@ -3,15 +3,6 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-schedules:
-- cron: "0 8 * * *"
-  displayName: Daily midnight build
-  branches:
-    include:
-    - master
-    - 202012
-  always: true
-
 trigger: none
 pr: none
 
@@ -19,11 +10,10 @@ stages:
 - stage: Build
   pool: sonicbld
   variables:
-    CACHE_MODE: wcache
-    ${{ if eq(variables['Build.SourceBranchName'], '202012') }}:
-      VERSION_CONTROL_OPTIONS: 'SONIC_VERSION_CONTROL_COMPONENTS=deb,py2,py3,web'
+    DOCKER_DATA_ROOT_FOR_MULTIARCH: /data/multiarch/docker
   jobs:
-  - template: azure-pipelines-build.yml
-    parameters:
-      buildOptions: 'USERNAME=admin SONIC_BUILD_JOBS=$(nproc) ${{ variables.VERSION_CONTROL_OPTIONS }}'
-      jobFilters: none
+  - job: test
+    steps:
+    - script:
+        env
+      displayName: Print env
